k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crewspace
  namespace: crewspace
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - REPLACE_ME
      secretName: crewspace-tls
  rules:
    - host: REPLACE_ME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crewspace
                port:
                  number: 80
